--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-financier_by_gavrilov_bot = '6840020746:AAEVKbDeA8pf1oUtsgFhA0MA3VM3Ut-POcg'
+key_bot = '7259877330:AAGXtdLC1dYmfsxm7Nz8XTd3TiZBx2Fe3lM'
+admin_1 = '2010916504'
+db_name = 'financier_db.db'
